remove TOC and align images

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "Run this notebook on binder\n",
+    "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/yungchidanielcho/python-datascience-ed/HEAD?labpath=corning_merck_workshop%2Fnotebooks%2Fintro_to_python.ipynb)"
    ],
    "metadata": {
@@ -16,21 +17,6 @@
   {
    "cell_type": "markdown",
    "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Overview\n",
-    "- Type\n",
-    "- Numeric Operators\n",
-    "-"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -169,7 +155,8 @@
     "thus cannot be used for variable names\n",
     "- A variable name must begin with either a letter or an underscore ( ), and can\n",
     "contain any number of letters, digits, or other underscores\n",
-    "![](img_1.png)"
+    "\n",
+    "![](assets/img_1.png)"
    ],
    "metadata": {
     "collapsed": false,
@@ -203,28 +190,18 @@
    "source": [
     "## Primitive Types\n",
     "\n",
+    "![](assets/img.png)\n",
+    "\n",
     "* _None_\n",
     "* _bool_: True, False\n",
-    "* _int_: unbounded\n",
-    "    * Hex, octal, and binary: 0xFF, 0o77, 0b11\n",
-    "\n",
-    "\n",
-    "* _float_: double-precision IEEE754\n",
+    "* _float_: double-precision\n",
     "    * Scientific notation: 1e3, 0.3e-3\n",
     "\n",
-    "\n",
-    "* _complex_: 3j, 100 + 3j\n",
-    "    * Adding a complex number to a normal integer yields a complex number.\n",
-    "    * The only actual use case I've seen is for some shortcut behavior in numpy.\n",
-    "\n",
-    "\n",
-    "* _str_: unicode in Py3, bytes in Py2\n",
+    "* _str_: unicode in Py3\n",
     "    * immutible, 0-indexed sequence\n",
     "    * Raw strings don't escape: r'c:\\\\raw\\\\normal'\n",
     "    * Adjacent string literals will concatenate: 'hello' ' world'\n",
-    "    * F-strings in 3.6+ will interpolate expressions: f'x = {x}'\n",
-    "\n",
-    "![](img.png)"
+    "    * F-strings in 3.6+ will interpolate expressions: f'x = {x}'"
    ]
   },
   {
@@ -475,12 +452,14 @@
    "cell_type": "markdown",
    "source": [
     "## Order of operation\n",
+    "\n",
     "![](assets/img_2.png)\n",
     "\n",
     "These rules come with two exceptions:\n",
     "- Operations of equal precedence are left associative\n",
     "- Exponentiation operations are right associative\n",
     "## Examples\n",
+    "\n",
     "![](assets/img_3.png)"
    ],
    "metadata": {
