adding merging dictionary

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -945,6 +945,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# merge dictionary\n",
+    "d1 = {'k1':1}\n",
+    "d2 = {'k2':2}\n",
+    "d3 = dict(**d1, **d2)\n",
+    "# in python 3.9 or higher\n",
+    "d3 = d1 | d2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "id": "d6221cb9-d265-4b88-8578-e8df428cc7ef",
    "metadata": {
