add set operation image

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -1007,6 +1007,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Set operations\n",
+    "![](assets/img_4.png)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39ccd638-138e-44e5-80b8-df1ed4c17a55",
