show only the good practice

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -1100,21 +1100,7 @@
    "source": [
     "x = float()\n",
     "y = x\n",
-    "x is y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e37d32e-f952-4b69-a28a-22aaeeccdbdc",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "float(1) is float(1) # some types do not cache instances"
+    "x == y"
    ]
   },
   {
@@ -1170,8 +1156,24 @@
    },
    "outputs": [],
    "source": [
-    "None is None and None == None # None is a singleton and self-equivalent"
+    "# preferred\n",
+    "None is None # None is a type"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# also works because none is self-equivalent\n",
+    "None == None"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
