--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -1157,7 +1157,7 @@
    "outputs": [],
    "source": [
     "# preferred\n",
-    "None is None # None is a type"
+    "None is None # None is a singleton"
    ]
   },
   {
