added text process to data manipulation

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -65,14 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "0ab490db-0bd3-4798-b86c-0040c9a06d16",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello, world!')"
    ]
@@ -947,6 +955,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2cbdf4fa",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# merge dictionary\n",
@@ -955,13 +969,7 @@
     "d3 = dict(**d1, **d2)\n",
     "# in python 3.9 or higher\n",
     "d3 = d1 | d2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1008,16 +1016,16 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Set operations\n",
-    "![](assets/img_4.png)"
-   ],
+   "id": "c341650a",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Set operations\n",
+    "![](assets/img_4.png)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1163,17 +1171,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf4b8a79",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# also works because none is self-equivalent\n",
     "None == None"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
