fix binder link

--- a/corning_merck_workshop/notebooks/data_manipulation.ipynb
+++ b/corning_merck_workshop/notebooks/data_manipulation.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "Open this notebook in binder\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/yungchidanielcho/python-datascience-ed/blob/master/corning_merck_workshop/notebooks/data_manipulation.ipynb/HEAD)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/yungchidanielcho/python-datascience-ed/HEAD?labpath=%2Fcorning_merck_workshop%2Fnotebooks%2Fdata_manipulation.ipynb)"
    ]
   },
   {
