--- a/corning_merck_workshop/notebooks/intermediate_python.ipynb
+++ b/corning_merck_workshop/notebooks/intermediate_python.ipynb
@@ -3,13 +3,20 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Open in binder\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/yungchidanielcho/python-datascience-ed/HEAD?labpath=%2Fcorning_merck_workshop%2Fnotebooks%2Fintermediate_python.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Scope"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
