moved functions to the second day. add more good practice to ifs.

--- a/corning_merck_workshop/notebooks/intermediate_python.ipynb
+++ b/corning_merck_workshop/notebooks/intermediate_python.ipynb
@@ -13,6 +13,137 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Functions\n",
+    "* Functions are _first class objects_\n",
+    "* Functions take both positional and keyword arguments\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    return x ** 2 + 5\n",
+    "\n",
+    "# positional argument\n",
+    "f(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# keyword argument\n",
+    "f(x=3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# default argument\n",
+    "def f(x, y=1):\n",
+    "    return x ** y"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def f(x: float, y: int =1) -> float:\n",
+    "    \"\"\"This function returns x to the power of y\n",
+    "\n",
+    "    Longer description here.\n",
+    "\n",
+    "    Args:\n",
+    "     x: description\n",
+    "     y: description\n",
+    "\n",
+    "    Returns:\n",
+    "        x to the power of y\n",
+    "\n",
+    "    Examples:\n",
+    "    >>> f(2,2)\n",
+    "    4\n",
+    "\n",
+    "    Raises:\n",
+    "    \"\"\"\n",
+    "    return x ** y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# type hinting and docstring\n",
+    "[google docstring style guide](https://google.github.io/styleguide/pyguide.html#383-functions-and-methods)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Readability counts\n",
+    "\n",
+    "- code are read more often than writing\n",
+    "- we read when\n",
+    "    - fix bug\n",
+    "    - add features\n",
+    "    - write tests\n",
+    "    - use other people's functions\n",
+    "- we write for\n",
+    "    - our future selves\n",
+    "    - our peers\n",
+    "    - our future peers\n",
+    "    - our users\n",
+    "    - our successors\n",
+    "- easy to read code contributes to python's success\n",
+    "    - easier to learn\n",
+    "    - easier to add new features\n",
+    "    - easier to spot mistakes\n",
+    "    - easier to hire for mangers\n",
+    "\n",
+    "Python's effort to improve readability\n",
+    "\n",
+    "https://peps.python.org/pep-0008/\n",
+    "\n",
+    "Tools to check and improve format\n",
+    "- checking tool: flake8\n",
+    "- formating tool: black\n",
+    "\n",
+    "Zen of python\n",
+    "\n",
+    "https://peps.python.org/pep-0020/"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Scope"
    ],
    "metadata": {
