--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -1489,6 +1489,134 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## guard clauses to avoid getting error"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "file = Path(\"text.txt\")\n",
+    "# avoid file not found error\n",
+    "if file.exists():\n",
+    "    text = file.read_text()\n",
+    "    print(text)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# avoid division by zero error\n",
+    "if x != 0:\n",
+    "    inverse = 1 / x\n",
+    "    print(f\"The inverse of x is {inverse}\")\n",
+    "# also called look before you leap"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Avoid multi level nested ifs improves readability"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "c = 3\n",
+    "\n",
+    "# Do\n",
+    "case_1 = all([a > 0, b < 3, c == b])\n",
+    "\n",
+    "if case_1:\n",
+    "    ans = c + b\n",
+    "else:\n",
+    "    ans = 0\n",
+    "\n",
+    "# Don't:\n",
+    "if a > 0:\n",
+    "    if b < 3:\n",
+    "        if c == b:\n",
+    "            ans = c + b\n",
+    "        else:\n",
+    "            ans = 0\n",
+    "    else:\n",
+    "        ans = 0\n",
+    "else:\n",
+    "    ans = 0\n",
+    "print(ans)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### separate logics from the task itself for easier testing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def make_decision(a,b,c):\n",
+    "    return all([a > 0, b < 3, c == b])\n",
+    "\n",
+    "def do_task(c, b):\n",
+    "    return c + b\n",
+    "\n",
+    "# check we make the right decision\n",
+    "assert make_decision(1,2,2) is True\n",
+    "assert make_decision(1,2,3) is False\n",
+    "\n",
+    "# check the task is working as intended\n",
+    "assert do_task(2,2) == 4\n",
+    "\n",
+    "if make_decision(a,b,c):\n",
+    "    ans = do_task(c,b)\n",
+    "else:\n",
+    "    ans = 0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "d3fbfd1c-d5ff-4041-8c6d-761b679960b3",
    "metadata": {
     "pycharm": {
@@ -1636,91 +1764,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "722d0456-136c-4bb8-84bb-d9d4822497a8",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Functions\n",
-    "* Functions are _first class objects_\n",
-    "* Functions take both positional and keyword arguments\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f620d65-ca6b-4373-8196-158918af7208",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def f(x):\n",
-    "    return x ** 2 + 5\n",
-    "\n",
-    "# positional argument\n",
-    "f(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2515f44",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# keyword argument\n",
-    "f(x=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17d109b3",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# default argument\n",
-    "def f(x, y=1):\n",
-    "    return x ** y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52584643",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# type hinting and docstring\n",
-    "def f(x: float, y: int =1) -> float:\n",
-    "    \"\"\"This function returns x to the power of y\n",
-    "\n",
-    "    :param x: description\n",
-    "    :param y: description\n",
-    "    :return: x to the power of y\n",
-    "    \"\"\"\n",
-    "    return x ** y\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b1b85403",
    "metadata": {
     "pycharm": {
@@ -1728,7 +1771,7 @@
     }
    },
    "source": [
-    "Math module"
+    "# Math module"
    ]
   },
   {
