add simply supported beam example

--- a/corning_merck_workshop/notebooks/intro_to_python.ipynb
+++ b/corning_merck_workshop/notebooks/intro_to_python.ipynb
@@ -1467,17 +1467,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "bool(-2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Empty containers are false"
@@ -1533,7 +1522,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "bool(list(list()))"
+    "bool([[]])"
    ],
    "metadata": {
     "collapsed": false
@@ -1545,6 +1534,17 @@
    "outputs": [],
    "source": [
     "bool((None, None))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "bool({'key':[]})"
    ],
    "metadata": {
     "collapsed": false
@@ -2153,6 +2153,101 @@
     "There are 6 questions and you can check if you got it right.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Example of physics application - Simply supported beam with uniformed load\n",
+    "\n",
+    "source: https://calcresource.com/statics-simple-beam.html#anchor-7\n",
+    "\n",
+    "The simply supported beam is one of the most simple structures. It features only two supports, one at each end. One pinned support and a roller support. Both of them inhibit any vertical movement, allowing on the other hand, free rotations around them. The roller support also permits the beam to expand or contract axially, though free horizontal movement is prevented by the other support.\n",
+    "![](https://cdn.calcresource.com/images/statics-simple-def.rev.fb9c383bef.png)\n",
+    "The static analysis of any load carrying structure involves the estimation of its internal forces and moments, as well as its deflections. Typically, for a plane structure, with in plane loading, the internal actions of interest are the axial force , the transverse shear force  and the bending moment . For a simply supported beam that carries only transverse loads, the axial force is always zero, therefore it is often neglected.\n",
+    "\n",
+    "### member force direction reference\n",
+    "![](https://cdn.calcresource.com/images/statics-nvm-signs.rev.8a4b0e426c.png)\n",
+    "\n",
+    "\n",
+    "## Uniformed supported load\n",
+    "\n",
+    "![](https://cdn.calcresource.com/images/statics-simple-load-udf.rev.d7b8e03910.png)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "An analytical solution for the deflection at a location x for simply supported beam with uniformed load is\n",
+    "\n",
+    "$$d(x) = \\frac{wx(L^3-2Lx^2 + x^3)}{24EI}$$\n",
+    "\n",
+    "where\n",
+    "d is deflection $(m)$\n",
+    "L is the length $(m)$\n",
+    "w is the uniformed load $(N/m)$\n",
+    "E is the modulus of elasticity $(N/m^2)$ also in Pascal\n",
+    "I is the moment of inertia $(m^4)$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# inputs\n",
+    "w = 50 *10 ** 3 #N/m\n",
+    "L = 1 #m\n",
+    "x = 0.5 #m\n",
+    "E = 200*10**6 #(N/m^2) Yung's modulus\n",
+    "I = (0.2*0.5**3)/12 #(m^4) Second moment of area"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-24T20:24:22.689604700Z",
+     "start_time": "2023-07-24T20:24:22.664605800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0015625"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deflection = (w * x *(L ** 3 - 2 * L * x ** 2 + x ** 3))/( 24 * E * I)\n",
+    "deflection"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-24T20:24:33.145178300Z",
+     "start_time": "2023-07-24T20:24:33.080117700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
